# seed-phrase-to-address

./: Cargo.toml  README.md
src/: address.rs  bech32.rs  bip32.rs  bip39.rs  main.rs
