[package]
name = "seed-phrase-to-address"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bitvec = "1.0.1"
clap = {version = "4.5.37", features = ["derive"] }
sha2 = "0.10.8"
lazy_static = "1.4.0"
pbkdf2 = "0.12.2"
k256 = {version = "0.13.4", features = ["ecdsa"] } 
hmac = "0.12.1"
ripemd = "0.1.3"
hex-literal = "1.0.0"
hex = "0.4.3"
